oops I haven't committed anything in forever. Updated to compile with VS2019, and began work on GwenJVSFaker (does not work!)

--- a/.gitignore
+++ b/.gitignore
@@ -259,3 +259,12 @@ paket-files/
 # Python Tools for Visual Studio (PTVS)
 __pycache__/
 *.pyc
+ViGEm
+x64
+Debug
+Release
+desktop.ini
+packages
+Release
+x64
+Debug
