--- a/GwenJVSFaker/GwenJVSFaker.vcxproj.filters
+++ b/GwenJVSFaker/GwenJVSFaker.vcxproj.filters
@@ -15,7 +15,24 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="gwenjvs.cc">
+    <ClInclude Include="gwenjvsfaker.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="helpers.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="input.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="keymap.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="config.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="gwenjvsfaker.cc">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="helpers.cc">
@@ -24,28 +41,5 @@
     <ClCompile Include="input.cc">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="output.cc">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="gwenjvs.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="keymap.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="output.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="input.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="helpers.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="config.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
   </ItemGroup>
 </Project>
